--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,10 +19,10 @@
             {% include icon-github.html username=site.github_username %}
           </li>
           {% endif %}
-
-          {% if site.twitter_username %}
+          
+          {% if site.linkedin_username %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            {% include icon-linkedin.html username=site.linkedin_username %}
           </li>
           {% endif %}
         </ul>
