--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -111,6 +111,15 @@
 .social-media-list {
     list-style: none;
     margin-left: 0;
+
+    li {
+        display: inline;
+        margin: 0 5px;
+    }
+
+    a:hover {
+        text-decoration: none;
+    }
 }
 
 .footer-col-wrapper {
@@ -168,7 +177,7 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    height: 100%;
 }
 
 .page-heading {
